bpo-44822: Don't truncate `str`s with embedded NULL chars returned by `sqlite3` UDF callbacks (GH-27588)

(cherry picked from commit 8f010dc920e1f6dc6a357e7cc1460a7a567c05c6)

Co-authored-by: Erlend Egeberg Aasland <erlend.aasland@innova.no>